This something I done yesterday evening. Don't want to loose my progress. Lots of progress! I have sync functions calls from JS to C++ native code and return data to JS. Thanks to person who found this clever solution exploit prompt because it works in sync.
Improved return types, validate compatible return types.
Started on vector registration.

--- a/BridgeExperiment/index.html
+++ b/BridgeExperiment/index.html
@@ -6,5 +6,6 @@
 //webkit.messageHandlers.BridgeTS.postMessage({ someProp: 'some value' });
 </script>
 <p style="color:red;" id="demo">Hello!</p>
+<button onclick="window.tester()">Run test</button>
 <div id='msg'></div>
 </body></html>
